# fimbulclient

./: .gitignore  .gitmodules  CMakeLists.txt  FimbulwinterClient.sln  README.md
CMake/: FindAwesomium.cmake  FindGLM.cmake  FindSFML.cmake  fhelpers.cmake
CMake/tests/: thread_local.cpp
Data/: ragnarok.xml
Data/data/shaders/: common.frag  common.vert  rognd.frag  rognd.vert  ts2d.frag  ts2d.vert
FimbulwinterClient/: CMakeLists.txt  Camera.h  FimbulwinterClient.cpp  FimbulwinterClient.h  FimbulwinterClient.vcxproj  FimbulwinterClient.vcxproj.filters  GameMode.h  LoginGameMode.h  WorldGameMode.cpp  WorldGameMode.h  fcstdafx.cpp  stdafx.h
FimbulwinterClient/FCRagnarok/: FimbulwinterClient.cpp  FimbulwinterClient.h  GameMode.h  LoginGameMode.h  WorldGameMode.cpp  WorldGameMode.h
FimbulwinterClient/FCRagnarok/FileSystem/: GrfFileSystem.cpp  GrfFileSystem.h
FimbulwinterClient/FCRagnarok/FileSystem/Grf/: Grf.cpp  Grf.h  GrfCrypt.cpp  GrfCrypt.h
FimbulwinterClient/FCRagnarok/FileSystem/Grf/zlib/: zlib.h
FimbulwinterClient/FCRagnarok/GUI/Renderers/: ControlRenderer.h  LabelRenderer.h
FimbulwinterClient/FCRagnarok/Graphics/: RsmModel.cpp  RsmModel.h  VertexDeclarations.cpp  VertexDeclarations.h  World.cpp  World.h  WorldModel.cpp  WorldModel.h
FimbulwinterClient/FCRagnarok/Shaders/: font.glsl
FimbulwinterClient/FCRagnarok/WorldMode/: TestMode.cpp  TestMode.h
FimbulwinterClient/FileSystem/: CMakeLists.txt  GrfFileSystem.cpp  GrfFileSystem.h
FimbulwinterClient/FileSystem/Grf/: Grf.cpp  Grf.h  GrfCrypt.cpp  GrfCrypt.h
FimbulwinterClient/GUI/Renderers/: ControlRenderer.h  LabelRenderer.h
FimbulwinterClient/Graphics/: CMakeLists.txt  CommonShaderProgram.h  RsmModel.cpp  RsmModel.h  VertexDeclarations.cpp  VertexDeclarations.h  World.cpp  World.h  WorldModel.cpp  WorldModel.h  WorldObjects.cpp  WorldObjects.h
FimbulwinterClient/Shaders/: ground.glsl  model.glsl
FimbulwinterClient/WorldMode/: CMakeLists.txt  TestMode.cpp  TestMode.h
Lib/: freetype2410.lib  freetype2410_D.lib
Lib/Debug/: sfml-graphics.lib  sfml-main.lib  sfml-system.lib  sfml-window.lib
YA3DE/: CMakeLists.txt  YA3DE.vcxproj  YA3DE.vcxproj.filters  stdafx.cpp  stdafx.h
YA3DE/GL/: glew.c  glew.h
YA3DE/SFML/Graphics/: Shape.hpp
YA3DE/SOIL/: SOIL.c  SOIL.h
YA3DE/YA3DE/: CMakeLists.txt  Config.cpp  Config.h  Game.cpp  Game.h  Helpers.h  Logger.cpp  Logger.h  Math.h  OpenGL.h  Pack1.h  PackEnd.h
YA3DE/YA3DE/Content/: CMakeLists.txt  ContentManager.cpp  ContentManager.h  ContentName.cpp  ContentName.h  Dispatcher.cpp  Dispatcher.h  Resource.h  StringResource.cpp  StringResource.h
YA3DE/YA3DE/FileSystem/: CMakeLists.txt  FileManager.cpp  FileManager.h  FolderFileSystem.h  IFile.h  IFileSystem.h  MemoryFile.h
YA3DE/YA3DE/GUI/: CMakeLists.txt  Control.cpp  Control.h  GUIManager.cpp  GUIManager.h  IGUIRenderer.h  Label.h
YA3DE/YA3DE/Graphics/: CMakeLists.txt  Font.cpp  Font.h  FontManager.cpp  FontManager.h  Graphics2D.cpp  Graphics2D.h  IndexBuffer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  VertexBuffer.h  VertexDeclaration.h  VertexPositionTexture.h
YA3DE/YA3DE/Math/: AABBox.h  Frustum.h
YA3DE/YA3DE/Scene/: CMakeLists.txt  Camera.h  FpsCamera.cpp  FpsCamera.h  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h
YA3DE/YA3DE/System/: Event.h  GLContext.h  Keyboard.h  Mouse.h  RenderWindow.h  VideoMode.h  Win32GLContext.cpp  Win32GLContext.h  Win32Keyboard.cpp  Win32Keyboard.h  Win32Mouse.cpp  Win32Mouse.h  Win32RenderWindow.cpp  Win32RenderWindow.h  XGLContext.cpp  XGLContext.h  XKeyboard.cpp  XMouse.cpp  XRenderWindow.cpp  XRenderWindow.h
YA3DE/rapidxml/: rapidxml_utils.hpp
data/: ragnarok.xml
data/data/shaders/: ground.glsl  model.glsl  uitexture.glsl
data/data/ui/: login.html  testmode.html
data/data/ui/js/: rocketmvvm.js
data/data/ui/styles/Metro/: jquery-ui.css
src/: CMakeLists.txt
src/fclient/: CMakeLists.txt
src/fclient/fclient/: GameMode.h  GuiManager.cpp  GuiManager.h  RagnarokClient.cpp  RagnarokClient.h  TestGameMode.cpp  TestGameMode.h  Ya3deDataSource.cpp  Ya3deDataSource.h  main.cpp
src/fclient/fclient/FileSystem/: GrfFileSystem.cpp  GrfFileSystem.h
src/fclient/fclient/FileSystem/Grf/: Grf.cpp  Grf.h
src/fclient/fclient/FileSystem/zlib/: zutil.h
src/fclient/fclient/Graphics/: RsmModel.cpp  RsmModel.h  VertexDeclarations.cpp  VertexDeclarations.h  World.cpp  World.h  WorldModel.cpp  WorldModel.h
src/libragnarok/: CMakeLists.txt
src/libragnarok/Ragnarok/FileSystem/: GrfFileSystem.cpp  GrfFileSystem.h
src/libragnarok/Ragnarok/FileSystem/Grf/: Grf.cpp  Grf.h  GrfCrypt.cpp  GrfCrypt.h
src/libragnarok/Ragnarok/FileSystem/zlib/: zconf.h
src/libragnarok/Ragnarok/GUI/: GuiManager.cpp  GuiManager.h  JSDispatcher.h  RocketMVVM.h  Ya3deDataSource.cpp  Ya3deDataSource.h
src/libragnarok/Ragnarok/Graphics/: RsmModel.cpp  RsmModel.h  VertexDeclarations.cpp  VertexDeclarations.h  World.cpp  World.h  WorldModel.cpp  WorldModel.h
src/testclient/: CMakeLists.txt  GameMode.cpp  GameMode.h  GuiManager.cpp  GuiManager.h  RagnarokClient.cpp  RagnarokClient.h  TestGameMode.cpp  TestGameMode.h  Ya3deDataSource.cpp  Ya3deDataSource.h  main.cpp
src/ya3de/: CMakeLists.txt
src/ya3de/YA3DE/: Application.cpp  Application.h  Helpers.h  Logger.cpp  Logger.h  Math.h  OpenGL.h
src/ya3de/YA3DE/Content/: ContentManager.cpp  ContentManager.h  ContentName.cpp  ContentName.h  Dispatcher.cpp  Dispatcher.h  Resource.h  StringResource.cpp  StringResource.h
src/ya3de/YA3DE/FileSystem/: FileManager.cpp  FileManager.h  FolderFileSystem.h  IFile.h  IFileSystem.h  MemoryFile.h
src/ya3de/YA3DE/Graphics/: IndexBuffer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  VertexBuffer.h  VertexDeclaration.h  VertexPositionTexture.cpp  VertexPositionTexture.h
src/ya3de/YA3DE/Math/: AABBox.h  Frustum.h
src/ya3de/YA3DE/Scene/: Camera.h  FpsCamera.cpp  FpsCamera.h  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h
